--- a/css/style.css
+++ b/css/style.css
@@ -6,7 +6,7 @@ body {
 
 /* line 17, ../sass/style.scss */
 #top {
-  background-image: url(../images/top.jpg);
+  background-image: url(../images/top.JPG);
   background-size: cover; }
 
 /* line 21, ../sass/style.scss */
