--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,7 +15,7 @@ body{
 	font-family: "ヒラギノ角ゴシック", "Hiragino Kaku Gothic", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "游ゴシック", YuGothic, "メイリオ", Meiryo, sans-serif;
 }
 #top{
-	background-image: url(../images/top.jpg);
+	background-image: url(../images/top.JPG);
 	background-size: cover;
 }
 #subtitle{
