--- a/css/style.css
+++ b/css/style.css
@@ -29,7 +29,7 @@ body {
 
 /* line 37, ../sass/style.scss */
 #titext {
-  font-size: xx-small;
+  font-size: 8px;
   margin: 0px 30px 0px 30px;
   padding-bottom: 10px;
   color: white;
