--- a/sass/style.scss
+++ b/sass/style.scss
@@ -35,7 +35,7 @@ body{
 	text-shadow: 1px 1px 6px rgba(0, 0, 0, 0.7);
 }
 #titext{
-	font-size: xx-small;
+	font-size: 8px;
 	margin: 0px 30px 0px 30px;
 	padding-bottom: 10px;
 	color: white;
