--- a/css/style.css
+++ b/css/style.css
@@ -34,28 +34,30 @@ body {
   padding-bottom: 10px;
   color: white;
   font-weight: 600;
-  text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7); }
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7); }
 
 /* line 45, ../sass/style.scss */
 .menu {
   padding: 0px;
-  width: 100%; }
-  /* line 48, ../sass/style.scss */
+  width: 100%;
+  border-top: solid #E6E6E6 1px;
+  border-bottom: solid #E6E6E6 1px; }
+  /* line 50, ../sass/style.scss */
   .menu a {
     padding: 0; }
 
-/* line 52, ../sass/style.scss */
+/* line 54, ../sass/style.scss */
 .menut1 {
   width: 100%;
   height: 45px;
   background-color: #F2B230; }
 
-/* line 58, ../sass/style.scss */
+/* line 60, ../sass/style.scss */
 .menupic {
   height: 45px;
   float: left; }
 
-/* line 62, ../sass/style.scss */
+/* line 64, ../sass/style.scss */
 .menus {
   color: white;
   font-weight: 600;
@@ -64,6 +66,6 @@ body {
   text-align: left;
   margin-left: 90px; }
 
-/* line 70, ../sass/style.scss */
+/* line 72, ../sass/style.scss */
 .menuicon {
   width: 40px; }
