--- a/sass/style.scss
+++ b/sass/style.scss
@@ -40,11 +40,13 @@ body{
 	padding-bottom: 10px;
 	color: white;
 	font-weight: 600;
-	text-shadow: 1px 1px 4px rgba(0, 0, 0, 0.7);
+	text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
 }
 .menu{
 	padding: 0px;
 	width: 100%;
+	border-top: solid $bonline 1px;
+	border-bottom: solid $bonline 1px;
 	a{
 		padding: 0;
 	}
