--- a/sass/style.scss
+++ b/sass/style.scss
@@ -12,7 +12,7 @@ $bonline: #E6E6E6;
 
 body{
 	width: 100%;
-	font-family: "ヒラギノ角ゴシック", "Hiragino Kaku Gothic", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "游ゴシック", YuGothic, "メイリオ", Meiryo, sans-serif;
+	font-family: "游ゴシック", YuGothic, "ヒラギノ角ゴシック", "Hiragino Kaku Gothic", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
 }
 #top{
 	background-image: url(../images/top.JPG);
@@ -55,7 +55,6 @@ body{
 	width: 100%;
 	height: 45px;
 	background-color: $mainorange;
-
 }
 .menupic{
 	height: 45px;
@@ -70,5 +69,7 @@ body{
     margin-left: 90px;
 }
 .menuicon{
-	width: 40px;
+	transform: scale(2) translateY(-1px);
+	position: relative !important;
+	left: 10px;
 }
