--- a/css/style.css
+++ b/css/style.css
@@ -5,7 +5,7 @@
 /* line 16, ../sass/style.scss */
 body {
   width: 100%;
-  font-family: "游ゴシック", YuGothic, "ヒラギノ角ゴシック", "Hiragino Kaku Gothic", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif; }
+  font-family: "游ゴシック", "游ゴシック体", YuGothic, "ヒラギノ角ゴシック", "Hiragino Kaku Gothic", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif !important; }
 
 /* line 20, ../sass/style.scss */
 #top {
@@ -86,3 +86,16 @@ body {
   width: 100%;
   height: 50px;
   background-color: #252659; }
+
+/* line 90, ../sass/style.scss */
+#syokai {
+  width: 100%;
+  height: 100px;
+  background-color: #252659; }
+
+/* line 95, ../sass/style.scss */
+#syot {
+  font-weight: 600;
+  color: white;
+  text-align: center;
+  padding-top: 20px; }
