--- a/sass/style.scss
+++ b/sass/style.scss
@@ -15,7 +15,7 @@ $bonline: #E6E6E6;
 }
 body{
 	width: 100%;
-	font-family: "游ゴシック", YuGothic, "ヒラギノ角ゴシック", "Hiragino Kaku Gothic", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
+	font-family: "游ゴシック", "游ゴシック体", YuGothic, "ヒラギノ角ゴシック", "Hiragino Kaku Gothic", "ヒラギノ角ゴ ProN W3", "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif !important;
 }
 #top{
 	background-image: url(../images/top.JPG);
@@ -86,4 +86,15 @@ body{
 	width: 100%;
 	height: 50px;
 	background-color: $mainnavy;
+}
+#syokai{
+	width: 100%;
+	height: 100px;
+	background-color: $mainnavy;
+}
+#syot{
+	font-weight: 600;
+	color: white;
+	text-align: center;
+	padding-top: 20px;
 }
