--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ img {
 
 /* line 23, ../sass/style.scss */
 #top {
-  background-image: url(../images/top.JPG);
+  background-image: url(../images/top.jpg);
   background-size: cover; }
 
 /* line 27, ../sass/style.scss */
@@ -129,4 +129,5 @@ img {
   font-size: 10px;
   color: white;
   padding-bottom: 30px;
-  margin-bottom: 0px; }
+  margin-bottom: 0px;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7); }
