--- a/sass/style.scss
+++ b/sass/style.scss
@@ -21,7 +21,7 @@ img{
 	vertical-align: bottom;
 }
 #top{
-	background-image: url(../images/top.JPG);
+	background-image: url(../images/top.jpg);
 	background-size: cover;
 }
 #subtitle{
@@ -123,4 +123,5 @@ img{
 	color: white;
 	padding-bottom: 30px;
 	margin-bottom: 0px;
+	text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
 }
