--- a/sass/style.scss
+++ b/sass/style.scss
@@ -105,7 +105,7 @@ img{
 }
 #con1{
 	display: block;
-	background-image: url(../images/con1.jpg);
+	background-image: url(../images/con1.JPG);
 	background-size: cover;
 }
 .contitle{
