--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@ img {
 
 /* line 23, ../sass/style.scss */
 #top {
-  background-image: url(../images/top.jpg);
+  background-image: url(../images/top.JPG);
   background-size: cover; }
 
 /* line 27, ../sass/style.scss */
@@ -114,6 +114,12 @@ img {
   background-size: cover; }
 
 /* line 111, ../sass/style.scss */
+#con2 {
+  display: block;
+  background-image: url(../images/con2.jpg);
+  background-size: cover; }
+
+/* line 116, ../sass/style.scss */
 .contitle {
   text-align: center;
   font-weight: 600;
@@ -121,7 +127,7 @@ img {
   color: white;
   font-size: 24px; }
 
-/* line 118, ../sass/style.scss */
+/* line 123, ../sass/style.scss */
 .context {
   padding-top: 10px;
   padding-left: 5px;
