終わりが見えてきた(眠い

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -113,6 +113,26 @@ img{
 	background-image: url(../images/con2.jpg);
 	background-size: cover;
 }
+#con3{
+	display: block;
+	background-image: url(../images/con3.jpg);
+	background-size: cover;
+}
+#con4{
+	display: block;
+	background-image: url(../images/con4.jpg);
+	background-size: cover;
+}
+#con5{
+	display: block;
+	background-image: url(../images/con5.jpg);
+	background-size: cover;
+}
+#con6{
+	display: block;
+	background-image: url(../images/con6.jpg);
+	background-size: cover;
+}
 .contitle{
 	text-align: center;
 	font-weight: 600;
