--- a/css/style.css
+++ b/css/style.css
@@ -120,6 +120,30 @@ img {
   background-size: cover; }
 
 /* line 116, ../sass/style.scss */
+#con3 {
+  display: block;
+  background-image: url(../images/con3.jpg);
+  background-size: cover; }
+
+/* line 121, ../sass/style.scss */
+#con4 {
+  display: block;
+  background-image: url(../images/con4.jpg);
+  background-size: cover; }
+
+/* line 126, ../sass/style.scss */
+#con5 {
+  display: block;
+  background-image: url(../images/con5.jpg);
+  background-size: cover; }
+
+/* line 131, ../sass/style.scss */
+#con6 {
+  display: block;
+  background-image: url(../images/con6.jpg);
+  background-size: cover; }
+
+/* line 136, ../sass/style.scss */
 .contitle {
   text-align: center;
   font-weight: 600;
@@ -127,7 +151,7 @@ img {
   color: white;
   font-size: 24px; }
 
-/* line 123, ../sass/style.scss */
+/* line 143, ../sass/style.scss */
 .context {
   padding-top: 10px;
   padding-left: 5px;
