--- a/sass/style.scss
+++ b/sass/style.scss
@@ -150,3 +150,26 @@ img{
 	margin-bottom: 0px;
 	text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.7);
 }
+#footer{
+	background-color: $mainorange;
+}
+#tel{
+	padding-top: 20px;
+	color: white;
+	text-align: center;
+	font-weight: 600;
+	font-size: 16px;
+	a{
+		color: $mainnavy;
+	}
+}
+#send{
+	display: block;
+	margin: 5px auto 9px auto;
+	text-align: center;
+	color: white;
+	font-weight: 600;
+	background-color: $mainnavy;
+	width: 80px;
+	height: 30px;
+}
