--- a/sass/style.scss
+++ b/sass/style.scss
@@ -173,3 +173,15 @@ img{
 	width: 80px;
 	height: 30px;
 }
+.navi{
+	color: white;
+	transform: scale(4);
+}
+#navicon{
+	padding-top: 10px;
+	text-align: right;
+}
+#info{
+	margin-right: 20px;
+	margin-left: 25px;
+}
